--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -2,7 +2,7 @@
 
   {% if site.comment.livere %}
 
-      <div id="lv-container" data-id="city" data-uid="{{site.comment.livere}}">
+      <!-- <div id="lv-container" data-id="city" data-uid="{{site.comment.livere}}">
       <script type="text/javascript">
          (function(d, s) {
              var j, e = d.getElementsByTagName(s)[0];
@@ -20,13 +20,13 @@
   {% elsif site.comment.disqus %}
     <div id="disqus_thread"></div>
     <script>
-    
+
     var disqus_config = function () {
         this.page.url = "{{ page.url | prepend: site.baseurl | prepend: site.url }}";
         this.page.identifier = "{{ page.url }}";
     };
     var disqus_shortname = '{{ site.comment.disqus }}';
-    
+
     (function() { // DON'T EDIT BELOW THIS LINE
         var d = document, s = d.createElement('script');
         s.src = '//' + disqus_shortname + '.disqus.com/embed.js';
@@ -34,8 +34,25 @@
             (d.head || d.body).appendChild(s);
         })();
     </script>
-    <noscript>要查看<a href="http://disqus.com/?ref_noscript"> Disqus </a>评论，请启用 JavaScript</noscript>
-    
+    <noscript>要查看<a href="http://disqus.com/?ref_noscript"> Disqus </a>评论，请启用 JavaScript</noscript> -->
+    <!-- LiveRe City install code -->
+<div id="lv-container" data-id="city" data-uid="MTAyMC81NjE2Mi8zMjYyNQ==">
+	<script type="text/javascript">
+   (function(d, s) {
+       var j, e = d.getElementsByTagName(s)[0];
+
+       if (typeof LivereTower === 'function') { return; }
+
+       j = d.createElement(s);
+       j.src = 'https://cdn-city.livere.com/js/embed.dist.js';
+       j.async = true;
+
+       e.parentNode.insertBefore(j, e);
+   })(document, 'script');
+	</script>
+<noscript> Please activate JavaScript for write a comment in LiveRe</noscript>
+</div>
+<!-- completed City install code -->
   {% endif %}
 
 </section>
